...
        let button = Bundle.main.loadNibNamed("ButtonView", owner: self, options: nil)?.first! as! ButtonView
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }
    
    func setUserButton() {
        actionButton.setImage(UIImage(systemName: "person"), for: .normal)
        actionButton.setImage(UIImage(systemName: "person.fill"), for: .selected)
        actionButton.tag = ButtonEnum.user.rawValue
    }
    
    func setPhoneButton() {
        actionButton.setImage(UIImage(systemName: "phone"), for: .normal)
...
