...
                                <rect key="frame" x="5" y="10" width="50" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="81W-rR-88u"/>
                                    <constraint firstAttribute="height" constant="50" id="lNS-su-i9G"/>
                                </constraints>
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" image="lifepreserver" catalog="system"/>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="uw1-bl-kdH" firstAttribute="top" secondItem="aeJ-Ab-kTA" secondAttribute="top" id="7u8-gT-pRq"/>
...
